# dicer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
dicer/: CMakeLists.txt  dicer.h  dicer.hpp
dicer/dicer/: dice.h  dice.hpp  distribution.h  distribution.hpp  fft.cpp  fft.h  hash.h  indexer.h  monomial.h  monomial.hpp  polynomial.cpp  polynomial.h  polynomial.hpp  symbol_set.h  symbol_set.hpp  utils.h  utils.hpp
dicer/dicer/aeon_trespass/: aeon_trespass.cpp  aeon_trespass.h
test/: CMakeLists.txt  test.cpp
